updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ wp-content/backup-db/
 wp-content/backups/
 wp-content/blogs.dir/
 wp-content/cache/
-wp-content/plugins/
+wp-content/themes/twenty-*/
 wp-content/upgrade/
 wp-content/uploads/
 wp-content/wp-cache-config.php
